Fix overflow issue on timeline page

--- a/src/scss/components/_body.scss
+++ b/src/scss/components/_body.scss
@@ -1,6 +1,8 @@
 .body {
   background: linear-gradient(to bottom left, $white, darken($white, 3%));
   position: relative;
+  max-width: 100vw;
+  overflow-x: hidden;
 
   @media (width: 1024px) {
     &.index {
